amended index.html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors App</title>
-
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
    
-<h1>Thanks for playing!</h1> 
+    <h1 class="hover">Thanks for playing!</h1>
     
-<img src="/assets/images/screenshot/mynaplesset.png"> <alt="sunset"></alt><img>
-
 
 <script src="script.js"></script>
 </body>
