added glowing text

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
    
-    <h1 class="hover">Thanks for playing!</h1>
+    <h1>Thanks for playing!</h1>
     
-
+    
 <script src="script.js"></script>
 </body>
 
